--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,54 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.App {
+  min-height: 100vh;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  padding: 40px;
+  font-size: 16px;
+  background-image: linear-gradient(to top, #dfe9f3 0%, white 100%);
+}
+
+h1 {
+  color: forestgreen;
+}
+
+input {
+  padding-left: 5px;
+  font-size: 20px;
+  width: 250px;
+  height: 30px;
+}
+
+table {
+  width: 1000px;
+  border-collapse: separate;
+  border-spacing: 0 1em;
+}
+
+thead {
+  background-color: rgb(44, 44, 44);
+  color: white;
   text-align: center;
 }
 
+tbody>tr {
+  text-align: right;
+}
+
+.rank {
+  text-align: center;
+  font-weight: bold;
+}
+
 .logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+  display: flex;
+  justify-content: flex-start;
+  padding-left: 10%;
+  gap: 10px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.symbol {
+  text-align: center;
 }
